# cumulus

./: .babelrc  .bookignore  .dockerignore  .eslint-ratchet-high-water-mark  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .git-blame-ignore-revs  .gitallowed  .gitignore  .gitmodules  .markdownlint.json  .npmignore  .nvmrc  .pre-commit-config.yaml  .travis.1.yml  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  CUMULUS-4000 Bug Investigation.docx  CUMULUS-4000-comprehensive-plan.md  DATA_CHANGELOG.md  DATA_MODEL_CHANGELOG.md  DATA_MODEL_README.md  DATA_README.md  LICENSE  Procfile  README.md  adding-a-task.html  api-gateway-example-event.json  app.js  architecture.html  audit-ci.json  aws.js  book.json  cloudformation.yaml  cumulus-4000-plan2.md  (+40 more)
.circleci/: config.yml
cnm-to-cma/: pyproject.toml
example/lambdas/python-processing/: Dockerfile  Pipfile  README.md  package-lock.json  package.json  process_activity.py  pyproject.toml  requirements.txt
example/lambdas/python-processing/deploy/: README.md  main.tf  outputs.tf  variables.tf
example/lambdas/python-processing/test/: test_process_activity.py
example/lambdas/python-processing/tests/: test_process_activity.py
example/lambdas/python-reference-activity/: Dockerfile  Pipfile  README.md  package-lock.json  package.json  process_activity.py  pyproject.toml  requirements.txt
example/lambdas/python-reference-activity/deploy/: README.md  main.tf  outputs.tf  variables.tf
example/lambdas/python-reference-activity/tests/: test_process_activity.py
example/lambdas/python-reference-task/: Pipfile  README.md  initial_task.py  package-lock.json  package.json  package.sh  pyproject.toml  requirements.txt
example/lambdas/python-reference-task/deploy/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
example/lambdas/python-reference-task/src/: initial_task.py  task.py
example/lambdas/python-reference-task/tests/: test_process_activity.py
example/lambdas/python-reference-task/tf-modules/: README.md  variables.tf
tasks/add-input-granules/: README.md  package.json  pyproject.toml  requirements.txt
tasks/add-input-granules/deploy/: main.tf  outputs.tf  variables.tf
tasks/add-input-granules/schemas/: input.json  output.json
tasks/add-input-granules/src/add_input_granules/: task.py
tasks/add-input-granules/tasks/add-input-granules/: requirements.txt
tasks/aws-api-proxy/: README.md  VERSION  package.json  pyproject.toml  requirements.txt
tasks/aws-api-proxy/deploy/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
tasks/aws-api-proxy/schemas/: config.json  config.py  output.json  output.py
tasks/aws-api-proxy/src/: main.py
tasks/aws-api-proxy/src/aws_api_proxy/: __init__.py  aws_api_proxy.py
tasks/aws-api-proxy/tasks/aws-api-proxy/: requirements.txt
tasks/aws-api-proxy/tests/: conftest.py
tasks/cma-to-cnm/: README.md  package.json  pyproject.toml  ruff.toml
tasks/cma-to-cnm/deploy/: lambda.tf  main.tf  output.tf  variable.tf  variables.tf
tasks/cma-to-cnm/src/cma2cnm/: cma_to_cnm.py
tasks/cma-to-cnm/src/cma_to_cnm/: cma_to_cnm.py  models_cma.py  models_cnm.py
tasks/cma-to-cnm/src/schemas/: config.json  input.json
tasks/cma-to-cnm/tests/: test_cma_to_cnm.py
tasks/cma-to-cnm/tests/resources/: input_multi_granule.json
tasks/cnm-response/: README.md  package.json  pyproject.toml  requirements.txt
tasks/cnm-response/cnm_response/: __init__.py  create_cnm.py  sender.py  task.py  types.py
tasks/cnm-response/deploy/: main.tf  output.tf  variables.tf
tasks/cnm-response/schemas/: config.json  config.py  input.json  input.json.template  input.py  output.json  output.json.template  output.py
tasks/cnm-response/src/: main.py
tasks/cnm-response/src/cnm_response/: __init__.py  create_cnm.py  sender.py  task.py  types.py
tasks/cnm-response/tasks/cnm-response/: requirements.txt
tasks/cnm-response/tests/: conftest.py  test_create_cnm.py  test_sender.py  test_task.py
tasks/cnm-response/tests/integration_tests/: test_lambda_handler.py
tasks/cnm-to-cma/: .gitignore  README.md  build_lambda.sh  cnm_to_cma.py  models_cma_file.py  models_cnm.py  package.json  pyproject.toml  requirements.txt  ruff.toml
tasks/cnm-to-cma/deploy/: lambda.tf  main.tf  output.tf  terraform.tfvars  variable.tf  variables.tf
tasks/cnm-to-cma/resources/: cumulus_sns_schema.json
tasks/cnm-to-cma/schemas/: config.json  config.py  files.schema.json  input.json  input.py  output.json  output.py
tasks/cnm-to-cma/src/: main.py
tasks/cnm-to-cma/src/cnm2cma/: cnm_to_cma.py  models_cma_file.py  models_cnm.py  models_granule.py
tasks/cnm-to-cma/src/cnm_to_cma/: __init__.py  cnm_to_cma.py  models_cnm.py  models_granule.py  task.py
tasks/cnm-to-cma/tasks/cnm-to-cma/: requirements.txt
tasks/cnm-to-cma/terraform/: lambda.tf  main.tf  output.tf
tasks/cnm-to-cma/tests/: conftest.py  test_cnm2cma.py  test_cnm_to_cma.py
tasks/filter-granules/: README.md  package.json  pyproject.toml
tasks/filter-granules/schemas/: config.json  input.json  output.json
tasks/get-cnm/: README.md  package.json  pyproject.toml  requirements.txt
tasks/get-cnm/deploy/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
tasks/get-cnm/schemas/: input.json  input.py  output.json  output.py
tasks/get-cnm/src/: main.py
tasks/get-cnm/tests/: conftest.py
tasks/granule-invalidator/: README.md  build-config.json  generate_dirs.bash  package.json  pyproject.toml  requirements.txt
tasks/granule-invalidator/deploy/: README.md  main.tf  output.tf  outputs.tf  variables.tf
tasks/granule-invalidator/schemas/: config.json  config.py  config_schema.json  output.json  output.py
tasks/granule-invalidator/src/: main.py
tasks/granule-invalidator/tests/: conftest.py
tasks/pdr-cleanup/: README.md  package.json  pdr-cleanup.py  pdr_cleanup.py  pyproject.toml  requirements.txt
tasks/pdr-cleanup/deploy/: main.tf  outputs.tf  terraform.tfvars.sample  variables.tf
tasks/pdr-cleanup/schemas/: config.json  input.json  output.json
tasks/pdr-cleanup/test/: test_pdr_cleanup.py
(+59339 files in other folders)
