[project]
name = "aws-api-proxy"
version = "21.3.2"
description = "Makes specified AWS API calls wrapped the Cumulus Message Adapter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cumulus-message-adapter>=2.0.5",
    "cumulus-message-adapter-python>=2.4.0",
]

[project.urls]
homepage = "https://github.com/nasa/cumulus/blob/master/tasks/aws-api-proxy"
documentation = "https://github.com/nasa/cumulus/blob/master/tasks/aws-api-proxy/README.md"
repository = "https://github.com/nasa/cumulus.git"

[dependency-groups]
dev = [
    "python-common-dev-dependencies",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
generate-config-schema = "aws_api_proxy.schemas.config_schema:main"
generate-output-schema = "aws_api_proxy.schemas.output_schema:main"

[tool.uv.sources]
python-common-dev-dependencies = { path = "../../packages/python-common-dev-dependencies" }
