[project]
name = "aws-api-proxy"
version = "21.3.2"
description = "Makes specified AWS API calls wrapped the Cumulus Message Adapter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cumulus-message-adapter-python~=2.4",
]

[project.urls]
homepage = "https://github.com/nasa/cumulus/blob/master/tasks/aws-api-proxy"
documentation = "https://github.com/nasa/cumulus/blob/master/tasks/aws-api-proxy/README.md"
repository = "https://github.com/nasa/cumulus.git"

[dependency-groups]
dev = [
    "python-common-dev-dependencies",
    "python-schemas",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--cov=aws_api_proxy",
    "--cov-report=lcov:.nyc_output",
]
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.uv.sources]
python-schemas = { path = "../../packages/python-schemas" }
python-common-dev-dependencies = { path = "../../packages/python-common-dev-dependencies" }
