[project]
name = "cma-to-cnm"
version = "1.0.0"
description = "Translate CMA message to CNM format for ingestion into PODAAC Cumulus"
authors = [
    { name = "ESHINDavid Yen", email = "david.yen@jpl.nasa.gov" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "cumulus-message-adapter-python (>=2.4.0,<3.0.0)",
    "pydantic-core (>=2.41.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov~=7.0",
    "mypy~=1.19",
    "ruff~=0.14.0",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--cov=cma_to_cnm",
    "--cov-report=lcov:.nyc_output",
]
pythonpath = ["src"]
testpaths = [
    "tests",
]
