[project]
name = "cnm-response"
version = "21.3.2"
description = "CNM Response task"
requires-python = "~=3.12.0"
dependencies = [
    "boto3~=1.40",
    "cumulus-message-adapter-python~=2.4",
]

[dependency-groups]
dev = [
    "python-common-dev-dependencies",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--cov=cnm_response",
    "--cov-report=lcov:.nyc_output",
]
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.uv.sources]
python-common-dev-dependencies = { path = "../../packages/python-common-dev-dependencies" }
