[project]
name = "cnm-to-cma"
version = "21.0.1"
description = "Translate CNM message to CMA"
authors = [
    { name = "ESHINDavid Yen", email = "david.yen@jpl.nasa.gov" }
]
readme = "README.md"
requires-python = "~=3.12.0"

dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "cumulus-message-adapter-python==2.4.0",
    "pydantic-core (>=2.41.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "freezegun~=1.5",
    "moto~=5.1",
    "mypy~=1.19",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-mock~=3.15",
    "ruff~=0.14.0",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--cov=cnm_to_cma",
    "--cov-report=lcov:.nyc_output",
]
pythonpath = ["src"]
testpaths = [
    "tests",
]
