[project]
name = "cnm-to-cma"
version = "21.3.2"
description = "Translate CNM message to CMA"
authors = [
    { name = "ESHINDavid Yen", email = "david.yen@jpl.nasa.gov" }
]
readme = "README.md"
requires-python = "~=3.12.0"

dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "cumulus-message-adapter-python==2.4.0",
    "pydantic-core (>=2.41.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "python-common-dev-dependencies",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--cov=cnm_to_cma",
    "--cov-report=lcov:.nyc_output",
]
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.uv.sources]
python-common-dev-dependencies = { path = "../../packages/python-common-dev-dependencies" }
