[project]
name = "cnm-to-cma"
version = "21.3.2"
description = "Translate CNM message to CMA"
authors = [
    { name = "ESHINDavid Yen", email = "david.yen@jpl.nasa.gov" }
]
readme = "README.md"
requires-python = "~=3.12.0"

dependencies = [
    "cumulus-message-adapter-python~=2.4",
]

[dependency-groups]
dev = [
    "python-common-dev-dependencies",
    "python-schemas",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--cov=cnm_to_cma",
    "--cov-report=lcov:.nyc_output",
]
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.uv.sources]
python-common-dev-dependencies = { path = "../../packages/python-common-dev-dependencies" }
python-schemas = { path = "../../packages/python-schemas" }
