[project]
name = "filter-granules"
version = "21.0.1"
description = "Filters completed granules out"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "cumulus-api",
    "cumulus-message-adapter-python==2.4.0",
]

[dependency-groups]
dev = [
    "mypy~=1.19.0",
    "pytest~=9.0.2",
    "pytest-mock~=3.15.1",
    "ruff~=0.14.0",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--maxfail=1",
    "-ra",
]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]

[tool.uv.sources]
cumulus-api = { git = "https://github.com/ghrcdaac/cumulus-api", tag = "v3.0.6" }
