[project]
name = "get-cnm"
version = "0.1.0"
description = "Retrieves the originating CNM message for a specified granule"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cumulus-api",
    "cumulus-message-adapter>=2.0.5",
    "cumulus-message-adapter-python>=2.4.0",
]

[project.urls]
homepage = "https://github.com/nasa/cumulus/blob/master/tasks/get-cnm"
documentation = "https://github.com/nasa/cumulus/blob/master/tasks/get-cnm/README.md"
repository = "https://github.com/nasa/cumulus.git"

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "ruff~=0.14.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "moto~=5.1",
    "pydantic>=2.10.4",
]

[tool.uv.sources]
cumulus-api = { git = "https://github.com/ghrcdaac/cumulus-api", tag = "v3.0.4" }

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
generate-config-schema = "get_cnm.schemas.config_schema:main"
generate-output-schema = "get_cnm.schemas.output_schema:main"
