[project]
name = "get-cnm"
version = "21.3.2"
description = "Retrieves the originating CNM message for a specified granule"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cumulus-api",
    "cumulus-message-adapter>=2.0.5",
    "cumulus-message-adapter-python>=2.4.0",
]

[project.urls]
homepage = "https://github.com/nasa/cumulus/blob/master/tasks/get-cnm"
documentation = "https://github.com/nasa/cumulus/blob/master/tasks/get-cnm/README.md"
repository = "https://github.com/nasa/cumulus.git"

[dependency-groups]
dev = [
    "python-common-dev-dependencies",
    "pydantic>=2.10.4",
]

[tool.uv.sources]
cumulus-api = { git = "https://github.com/nasa/Cumulus-API-Python", tag = "v3.2.1" }
python-common-dev-dependencies = { path = "../../packages/python-common-dev-dependencies" }

[tool.pytest.ini_options]
pythonpath = ["src"]
