[project]
name = "granule-invalidator"
version = "21.3.2"
description = "Identifies granules that fulfill specific criteria"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cumulus-api",
    "cumulus-message-adapter>=2.0.5",
    "cumulus-message-adapter-python>=2.4.0",
]

[project.urls]
homepage = "https://github.com/nasa/cumulus/blob/master/tasks/granule-invalidator"
documentation = "https://github.com/nasa/cumulus/blob/master/tasks/granule-invalidator/README.md"
repository = "https://github.com/nasa/cumulus.git"

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "ruff~=0.14.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pydantic>=2.10.4",
]

[tool.uv.sources]
cumulus-api = { git = "https://github.com/nasa/Cumulus-API-Python", tag = "v3.2.1" }

[tool.pytest.ini_options]
pythonpath = ["src"]
