[project]
name = "granule-invalidator"
version = "21.3.2"
description = "Identifies granules that fulfill specific criteria"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cumulus-api",
    "cumulus-message-adapter>=2.0.5",
    "cumulus-message-adapter-python>=2.4.0",
]

[project.urls]
homepage = "https://github.com/nasa/cumulus/blob/master/tasks/granule-invalidator"
documentation = "https://github.com/nasa/cumulus/blob/master/tasks/granule-invalidator/README.md"
repository = "https://github.com/nasa/cumulus.git"

[dependency-groups]
dev = [
    "python-common-dev-dependencies",
    "python-schemas",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--cov=granule_invalidator",
    "--cov-report=lcov:.nyc_output",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.sources]
cumulus-api = { git = "https://github.com/nasa/Cumulus-API-Python", tag = "v3.2.1" }
python-common-dev-dependencies = { path = "../../packages/python-common-dev-dependencies" }
python-schemas = { path = "../../packages/python-schemas" }
