[project]
name = "pdr-cleanup"
version = "21.3.2"
description = "This task is for cleaning up PDRs after a successful ingest"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "boto3~=1.40",
    "cumulus-message-adapter-python~=2.4",
]

[dependency-groups]
dev = [
    "python-common-dev-dependencies",
]

[tool.uv.sources]
python-common-dev-dependencies = { path = "../../packages/python-common-dev-dependencies" }
