[project]
name = "cumulus-python-reference-activity"
version = "21.3.2"
description = "Python reference activity"
requires-python = "~=3.12.0"
dependencies = [
    "boto3~=1.40",
    "cumulus-process~=1.6",
]

[dependency-groups]
dev = [
    "python-common-dev-dependencies",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--maxfail=1",
    "-ra",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.sources]
python-common-dev-dependencies = { path = "../../../packages/python-common-dev-dependencies" }
