[project]
name = "cumulus-python-reference-task"
version = "21.0.1"
description = "Python reference task"
requires-python = "~=3.12.0"
dependencies = [
    "boto3~=1.40.29",
    "cumulus-process==1.6.0",
    "cumulus-message-adapter-python==2.4.0",
    "six>=1.12.0",
]

[dependency-groups]
dev = [
    "mypy~=1.19.0",
    "ruff~=0.14.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true